--- a/Signup/signup.html
+++ b/Signup/signup.html
@@ -67,7 +67,7 @@
     <div
       class="d-flex flex-column justify-content-center align-items-center mt-5"
     >
-      <form id="form" method="POST" action="form.php">
+      <form id="form" method="POST" action="./form.php">
         <h4 style="margin-bottom: 2rem">Sign Up</h4>
         <input type="text" name="name" placeholder="Enter Your Name" required />
         <br />
@@ -91,7 +91,7 @@
         </div>
 
         <div>
-          <p>Already have an account ? <a href="login.html">Log In</a></p>
+          <p>Already have an account ? <a href="../Login/login.html">Log In</a></p>
         </div>
       </form>
     </div>
