--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
-    <style>
-      body {
-        font-family: "Oswald";
-        /* font-size: 14px; */
-
-      }
-    </style>
+    <link
+      href="https://fonts.googleapis.com/css?family=Oswald"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h3>THIS IS THE HOME PAGE</h3>
-    <br />
+    <header class="header">
+      <div class="header-left">
+        <img src="./star.png" alt="logo" />
+        <div>HOME</div>
+        <div>ABOUT</div>
+        <div>CONTACT US</div>
+      </div>
 
-    <a href="login.html">LOGIN</a>
-    <a href="signup.html">SIGN UP</a>
+      <div class="header-right">
+        <a href="./Login/login.html">LOGIN</a>
+        <a href="./Signup/signup.html">SIGNUP</a>
+      </div>
+    </header>
+
+    <h3>THIS IS HOME PAGE</h3>
   </body>
 </html>
