--- a/Login/login.html
+++ b/Login/login.html
@@ -89,7 +89,7 @@
         </div>
 
         <div>
-          <p>Don't have an account ? <a href="signup.html">Sign Up</a></p>
+          <p>Don't have an account ? <a href="../Signup/signup.html">Sign Up</a></p>
         </div>
       </form>
     </div>
