added header content and design

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       href="https://fonts.googleapis.com/css?family=Oswald"
       rel="stylesheet"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Salsa"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
@@ -25,6 +30,28 @@
       </div>
     </header>
 
-    <h3>THIS IS HOME PAGE</h3>
+    <div
+      class="header-section"
+      style="
+        display: flex;
+        align-items: center;
+        margin-top: 50px;
+        justify-content: center;
+      "
+    >
+      <div>
+        <h2>Best Food</h2>
+        <img class="food" src="./food1.png" />
+      </div>
+      <h2 style="transform: rotate(-90deg); margin: -15px;" >FOR</h2>
+      <div>
+        <img class="food" src="./food2.png" />
+        <h2>Your Taste</h2>
+      </div>
+    </div>
+    <div>
+      <h4>Find your favorite dish</h4>
+
+    </div>
   </body>
 </html>
