--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header">
       <div class="header-left">
-        <img src="./star.png" alt="logo" />
+        <img src="./Images/star.png" alt="logo" />
         <div>HOME</div>
         <div>ABOUT</div>
         <div>CONTACT US</div>
@@ -41,11 +41,11 @@
     >
       <div>
         <h2>Best Food</h2>
-        <img class="food" src="./food1.png" />
+        <img class="food" src="./Images/food1.png" />
       </div>
       <h2 style="transform: rotate(-90deg); margin: -15px;" >FOR</h2>
       <div>
-        <img class="food" src="./food2.png" />
+        <img class="food" src="./Images/food2.png" />
         <h2>Your Taste</h2>
       </div>
     </div>
